--- a/src/ui/form/connect_window.ui
+++ b/src/ui/form/connect_window.ui
@@ -277,6 +277,16 @@
      </item>
     </layout>
    </item>
+   <item row="3" column="0" colspan="2">
+    <widget class="QTextBrowser" name="text_browser_log">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>100</height>
+      </size>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <customwidgets>
